--- a/package.json
+++ b/package.json
@@ -14,11 +14,11 @@
     "jspdf-autotable": "^5.0.2",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.487.0",
-    "next": "15.3.0",
-    "react": "^19.0.0",
+    "next": "^15.3.0",
+    "react": "^19.1.0",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
-    "react-dom": "^19.0.0",
+    "react-dom": "^19.1.0",
     "react-leaflet": "^5.0.0"
   },
   "devDependencies": {
