Adiciona lista suspensa de CPF, trava nome, adiciona função e diária com botão de adicionar

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,10 +1,12 @@
 {
-    "name": "RH++",
-    "short_name": "RH++",
+    "name": "RH+",
+    "short_name": "RH+",
+    "description": "Sistema de controle de colaboradores",
     "start_url": "/",
     "display": "standalone",
     "background_color": "#ffffff",
     "theme_color": "#006633",
+    "orientation": "portrait",
     "icons": [
       {
         "src": "/icon.png",
