--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,18 +1,22 @@
 {
-    "name": "RH+",
-    "short_name": "RH+",
-    "description": "Sistema de controle de colaboradores",
-    "start_url": "/",
-    "display": "standalone",
-    "background_color": "#ffffff",
-    "theme_color": "#006633",
-    "orientation": "portrait",
-    "icons": [
-      {
-        "src": "/icon.png",
-        "type": "image/png",
-        "sizes": "512x512"
-      }
-    ]
-  }
-  
+  "name": "RH+",
+  "short_name": "RH+",
+  "description": "Sistema de controle de colaboradores",
+  "start_url": "/",
+  "display": "standalone",
+  "background_color": "#ffffff",
+  "theme_color": "#006633",
+  "orientation": "portrait",
+  "icons": [
+    {
+      "src": "/icon-192.png",
+      "type": "image/png",
+      "sizes": "192x192"
+    },
+    {
+      "src": "/icon-512.png",
+      "type": "image/png",
+      "sizes": "512x512"
+    }
+  ]
+}
