Adiciona lista suspensa de CPF, trava nome, adiciona função e diária com botão de adicionar

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -14,7 +14,7 @@
       "sizes": "192x192"
     },
     {
-      "src": "/artte.png",
+      "src": "/artte1.png",
       "type": "image/png",
       "sizes": "512x512"
     }
